--- a/EXAMEN_FINAL_YEN.csproj
+++ b/EXAMEN_FINAL_YEN.csproj
@@ -162,10 +162,28 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form2.Designer.cs">
+      <DependentUpon>Form2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form3.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form3.Designer.cs">
+      <DependentUpon>Form3.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form2.resx">
+      <DependentUpon>Form2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form3.resx">
+      <DependentUpon>Form3.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -193,6 +211,84 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\b9b3dfb6e5afbe1b0c2de51fba05e2d2.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Historia de Instagram Collage de Fotos Tienda Nueva Colección MInimalista  %281%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Historia de Instagram Collage de Fotos Tienda Nueva Colección MInimalista  %281%291.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Logo Tipográfico Marca Personal Divertido Colorido Rosa Fucsia Blanco.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Logo Tipográfico Marca Personal Divertido Colorido Rosa Fucsia Blanco %281%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\modaaa.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\hola.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\hola1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\hola2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Post de Instagram descuentos moda collage moderno.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\azuuuul.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\azuuuul1.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\hola21.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Logo Tipográfico Marca Personal Divertido Colorido Rosa Fucsia Blanco %282%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\frases instagram 2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\2222.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\color boton.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Usuario.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\usi2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\boton entrar.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\boton entrar1.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\hello.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\hello2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sisiisi.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\yenciiiii12.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
